Fix deprecated methods and some clean up.