@@ -27,13 +27,13 @@ public class SampleTest {
     @Test
     public void test_add() throws CLIParserException {
         Calc obj = (Calc) parser.parse("ADD 1.1 10".split(" "));
-        Assert.assertEquals(new Double(11.1d), new Double(obj.calc()));
+        Assert.assertEquals(Double.valueOf(11.1d), Double.valueOf(obj.calc()));
     }
 
     @Test
     public void test_subtract() throws CLIParserException {
         Calc obj = (Calc) parser.parse("SUBTRACT 11.1 10".split(" "));
-        Assert.assertEquals(new Double(1.1d), new Double(obj.calc()), 0.00001d);
+        Assert.assertEquals(Double.valueOf(1.1d), Double.valueOf(obj.calc()), 0.00001d);
     }
 
     @Test
@@ -43,13 +43,13 @@ public class SampleTest {
         Double[] numbers = Sampling.sampeDoubles(numOfParams);
         Double ans = Arrays.asList(numbers).stream().mapToDouble(i -> i.doubleValue()).sum();
         Calc obj = (Calc) parser.parse(("ADD" + Sampling.concat(numbers, ' ')).split(" "));
-        Assert.assertEquals(ans, new Double(obj.calc()));
+        Assert.assertEquals(ans, Double.valueOf(obj.calc()));
     }
 
     @Test
     public void test_pow() throws CLIParserException {
         Calc obj = (Calc) parser.parse("POW 1.0 1.33".split(" "));
-        Assert.assertEquals(1.0d, new Double(obj.calc()), 0.00001d);
+        Assert.assertEquals(1.0d, Double.valueOf(obj.calc()), 0.00001d);
     }
 
 }
